# onboarding_funnel_analysis

./: .gitattributes  README.md  dbt_project.yml  pyproject.toml
analysis/: 01_shard_inventory.sql  02_column_dictionary.sql  03_event_histogram.sql
dbt_onboarding/: dbt_project.yml
dbt_onboarding/models/marts/: mart_funnel_summary.sql  mart_onboarding_funnel.sql
dbt_onboarding/models/staging/: stg_events.sql
docs/: dataset_overview.md
exploration/: query_event_actions.md  query_event_actions.sql
macros/: date_where.sql
models/marts/: fact_ab_cohort.sql  fact_ab_cohort.yml  fact_ab_cohort_cleaned.sql  fact_ab_cohort_cleaned.yml  fact_conversion_funnel.sql  fact_conversion_funnel.yml  funnel_step_counts.sql  funnel_step_counts.yml
models/staging/: stg_events.sql  stg_events.yml
notebooks/: 00_dataset_overview.ipynb  01_funnel_eda.ipynb  02_int_sessions_check.ipynb  03_fact_conversion_funnel.ipynb  04_data_quality_cohort_check.ipynb  05_ab_test.ipynb  visualize_funnel.ipynb
